--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -11,80 +11,21 @@ html, body {
     margin: 0;
 }
 
-.full-height {
-    height: 100vh;
+.row{
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
-.flex-center {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-}
 
-.position-ref {
-    position: relative;
-}
-
-.top-right {
-    position: absolute;
-    right: 10px;
-    top: 18px;
-}
-
-.content {
-    text-align: center;
-}
-
-.title {
-    font-size: 84px;
-}
-
-.links > a {
-    color: #636b6f;
-    padding: 0 25px;
-    font-size: 12px;
-    font-weight: 600;
-    letter-spacing: .1rem;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-
-.m-b-md {
-    margin-bottom: 30px;
-}
-
-#logout-form{
-    display: none;
-}
-
-.panel {
-    margin-top: 20px;
-}
-
-.btn-dashboard {    
-    margin:auto;
-    margin-top: 10px;
-    display:block;
-}
-
-#content {
+.table {
     margin-top: 10px;
 }
 
-.centered{
+.card {
+    margin-top: 10px;
+}
+
+.centered {
     text-align:center;
 }
 
-.dropdown-submenu {
-    position: relative;
-}
-
-.dropdown-submenu .dropdown-menu {
-    top: 0;
-    right: 100%;
-    margin-top: -1px;
-}
-
-.version {
-    float:right
-}
