--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -4,7 +4,8 @@
 
 html, body {
     background-color: #fff;
-    color: #636b6f;
+    /*color: #636b6f;*/
+    color: #665570;
     font-family: 'Raleway', sans-serif;
     font-weight: 100;
     height: 100vh;
@@ -23,11 +24,16 @@ html, body {
 .card {
     margin-top: 10px;
 }
-
-.centered {
-    text-align:center;
-}
  
 a:hover {
     text-decoration: none;
+}
+
+.card-header,
+.thead-index {
+    background-color: #0edbad;
+}
+
+.font-weight-bold {
+    margin-bottom: 4px;
 }
