--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -52,3 +52,22 @@ a:hover {
 .font-weight-bold {
     margin-bottom: 4px;
 }
+
+.page-link:not(:disabled):not(.disabled) {
+    border-color: black;
+    background-color: #d0d0d0;
+    text-decoration: none;
+    color: black;
+    border-radius: 0px 0px;
+}
+
+.page-item.active .page-link{
+    background-color: #0edbad;
+    border-color: black;
+    color: black;
+    border-radius: 0px 0px;
+}
+
+.dropdown-item.active, .dropdown-item:active {
+    background-color: #0edbad;
+}
