Desarrollo de modulo logistica

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -70,3 +70,7 @@ a:hover {
 .dropdown-item.active, .dropdown-item:active {
     background-color: #0edbad;
 }
+
+#product-edit {
+    display: none;
+}
