--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,9 +5,9 @@
 html, body {
     background-color: #fff;
     color: #665570;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-weight: 100;
-    height: 100vh;
+    height: 150vh;
     margin: 0;
 }
 
